--- a/Ganko/Ganko.csproj
+++ b/Ganko/Ganko.csproj
@@ -118,6 +118,8 @@
     <Compile Include="Commons\Models\ContentResult.cs" />
     <Compile Include="Commons\Models\ResultModel.cs" />
     <Compile Include="Commons\Models\User.cs" />
+    <Compile Include="Commons\Security\ISecurityHub.cs" />
+    <Compile Include="Commons\Security\SecurityProcessor.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -182,6 +184,7 @@
   <ItemGroup>
     <None Include="Resources\后退.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
